# experiment-architect

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  NARRATIVE.md  PRODUCT.md  README.md  app.py  config.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: keep-streamlit-awake.yml  tests.yml
.streamlit/: config.toml  secrets.toml.example
docs/: CAUSAL_METHODS.md
examples/: sample_ab_test.csv
llm/: client.py  providers.py
stats/: bayesian.py  causal.py  decision_cards.py  frequentist.py  plots.py  sanity.py  validation.py
tests/: test_app_smoke.py  test_bayesian.py  test_calibration.py  test_causal.py  test_decision_cards.py  test_formatting.py  test_frequentist.py  test_llm_client.py  test_plots.py  test_providers.py  test_sanity.py  test_validation.py
ui/: components.py  formatting.py  snapshots.py  state.py  theme-tokens.css
