[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-architect"
version = "0.1.0"
description = "Streamlit app for experiment design, causal method selection, and result analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.52,<2.0",
    "pandas>=2.3,<3.0",
    "numpy>=2.0,<3.0",
    "scipy>=1.16,<2.0",
    "plotly>=6.5,<7.0",
    "statsmodels>=0.14,<0.15",
    "python-dotenv>=1.0,<2.0",
    "openai>=2.14,<3.0",
]

[project.optional-dependencies]
providers = [
    "anthropic>=0.76,<1.0",
    "google-generativeai>=0.8,<1.0",
]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.7,<1.0",
    "mypy>=1.13,<2.0",
    "pandas-stubs",
]

[tool.setuptools.packages.find]
include = ["llm", "llm.*", "stats", "stats.*", "ui", "ui.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "calibration: Monte Carlo calibration studies (slower, ~10s). Run with `pytest -m calibration`.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RET"]
# PLR2004 (magic numbers) and PLR0913 (too many args) misfire on stats code.
# E501 (line too long) is handled by ruff format instead.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts in tests are fine

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true  # streamlit and plotly do not ship full stubs

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # tests do not need full annotations
